test/syntax/32-unaop-err.c
// ======================================================================

/* unaop -> EXCLAMATION
          | AMPERSAND
          | MULTIPLY */

// ======================================================================

void main(void)
{
  int i;
  int *ip;

  i = *ip;
  ip = &&i;	// error: not unaop
  i = !i;
}

// ======================================================================
